--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <!--Auth String-->
     <string name="tv_sign_up">Don’t Have Account? Sign Up</string>
+    <string name="btn_login">Login</string>
 </resources>
