[Yusuf] - add logic for retrieve data in profile page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="ic_language">Change Language</string>
     <string name="btn_edit_profile">Edit Profile</string>
     <string name="btn_log_out">Log Out</string>
+    <string name="til_new_pass">New Password</string>
+    <string name="btn_update_profile">Update Profile</string>
 </resources>
