--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -24,4 +24,5 @@
     <string name="ic_language">Change Language</string>
     <string name="btn_edit_profile">Edit Profile</string>
     <string name="btn_log_out">Log Out</string>
+    <string name="btn_update_profile">Update Profile</string>
 </resources>
